--- a/common/scss/_main.scss
+++ b/common/scss/_main.scss
@@ -248,39 +248,42 @@
         .link_info {
             position: absolute;
             z-index: 99;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(#000,.4);
 
-
-            &::before {
-                content:'';
-                position: absolute;
-                width: 100%;
-                height: 100%;
+            .ani_pos {
+                width: 24px;
+                height: 24px;
                 border-radius: 50%;
+                position: absolute;
                 left: 0;
                 top: 0;
-                background-color: violet;
-                animation: link_info_ani 1s ease 0s infinite ;
-
                 z-index: -1;
-
-                visibility: visible;
-                transition: visibility .6s .6s ease;
+                transition: all .2s .4s ease-in-out;
+                &::before {
+                    content:'';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    left: 0;
+                    top: 0;
+                    background-color: violet;
+                    animation: link_info_ani 1s ease 0s infinite ;
+                }
+                &::after {
+                    content:'';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    left: 0;
+                    top: 0;
+                    background-color: violet;
+                    animation: link_info_ani 1s ease .3s infinite ;
+                }
             }
-            &::after {
-                content:'';
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                border-radius: 50%;
-                left: 0;
-                top: 0;
-                background-color: violet;
-                animation: link_info_ani 1s ease .3s infinite ;
-                z-index: -1;
-                transition: visibility .6s .6s ease;
-                visibility: visible;
 
-            }
 
             &1 {
                 left: 37%;
@@ -372,10 +375,9 @@
                     max-width: 300px;
                 }
 
-                &::before,
-                &::after {
-                    visibility: hidden;
-                    transition: visibility 0s 0s ease;
+                .ani_pos {
+                    opacity: 0;
+                    transition-delay: 0s;
                 }
 
                 i {
